# docs/swagger.json
@@ -16,44 +16,7 @@
     "host": "localhost:20011",
     "basePath": "/api",
     "paths": {
-        "/user//refresh": {
-            "post": {
-                "consumes": [
-                    "multipart/form-data"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "用户"
-                ],
-                "summary": "刷新jtoken",
-                "operationId": "4",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "name": "retoken",
-                        "in": "formData",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "code\":1,\"msg\":\"success\",\"data\":{\"jtoken\":\"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJFeHAiOiIyMDIxLTEyLTI2VDE5OjI1OjI4Ljg0OTIzNzUrMDg6MDAiLCJOYW1lIjoiZ3BocGVyIiwiVWlkIjo0fQ==.ab81bb7134978afe976df55b45789aefd10f6c3edb969bae283c32c080083b89\"}}",
-                        "schema": {
-                            "type": "json"
-                        }
-                    },
-                    "default": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/api.DefaultResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/user/example": {
+        "/example/index": {
             "post": {
                 "consumes": [
                     "multipart/form-data"
@@ -69,7 +32,6 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "default": "Bearer",
                         "description": "token",
                         "name": "authorization",
                         "in": "header",
@@ -114,6 +76,43 @@
                                     }
                                 }
                             ]
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/api.DefaultResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/user//refresh": {
+            "post": {
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "用户"
+                ],
+                "summary": "刷新jtoken",
+                "operationId": "4",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "name": "retoken",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "code\":1,\"msg\":\"success\",\"data\":{\"jtoken\":\"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJFeHAiOiIyMDIxLTEyLTI2VDE5OjI1OjI4Ljg0OTIzNzUrMDg6MDAiLCJOYW1lIjoiZ3BocGVyIiwiVWlkIjo0fQ==.ab81bb7134978afe976df55b45789aefd10f6c3edb969bae283c32c080083b89\"}}",
+                        "schema": {
+                            "type": "json"
                         }
                     },
                     "default": {
