# internal/controllers/api/user/userController.go
@@ -25,11 +25,11 @@ var Uc = userController{}
 // @version 1.0
 // @Accept multipart/form-data
 // @Produce json
-// @Param authorization header string true "token" default(Bearer)
+// @Param authorization header string true "token"
 // @Param info formData models.UserReq true "User info"
 // @Success 200 {object} api.SuccessResponse{data=models.UserReq}
 // @response default {object} api.DefaultResponse
-// @Router /user/example [post]
+// @Router /example/index [post]
 func (apicon *userController) UserExample(c *gin.Context) {
 
 	var (
